# haskell-fimage

./: README.md  cabal.sandbox.config  fimage-squeleton.cabal
src/: FImage-before.hs  FImage.hs
src/Data/FImage/: Algebra.hs  BMP.hs  Color.hs  Geometry.hs  Image.hs  Render.hs  Transform.hs  View.hs
src/Data/FImage/BImage/: Gallery.hs  Simple.hs
src/Data/FImage/Geometry/: Vector.hs
videos/: video.avi
